--- a/src/SQL/missionQueries.yaml
+++ b/src/SQL/missionQueries.yaml
@@ -16,7 +16,8 @@ getAllMissionsDashboard: |
   WHERE U.USR_MAIL = @Email
     AND USR_ROLE not in ('favori')
     AND D.DOS_ETAT = 'Ouvert' 
-    AND MD.MD_ETAT = 'ENC' 
+    AND MD.MD_ETAT = 'ENC'
+    AND D.DOS_PGI NOT IN ('555', '556')
     ORDER BY DOS_SOCIETEGROUPE, D.DOS_PGI, CASE 
       WHEN MD_MISSION LIKE '2%' THEN 'Mission EC' 
       WHEN MD_MISSION LIKE '37%' THEN 'Mission Paie' 
