--- a/src/SQL/userQueries.yaml
+++ b/src/SQL/userQueries.yaml
@@ -1,6 +1,6 @@
 getAllUsers: |
   SELECT USR_ID, 
-    USR_NOM, 
+    CONCAT(USR_PRENOM, ' ', USR_NOM) as USR_NOM, 
     USR_MAIL, 
     USR_DATE_DEBUT, 
     USR_UPDATE_DATE 
