--- a/docker-compose.staging.yml
+++ b/docker-compose.staging.yml
@@ -3,6 +3,7 @@ version: '3.8'
 services:
   myjourney-api:
     build: .
+    container_name: myjourney-api-staging
     ports:
       - "3000:3000"
     environment:
@@ -13,7 +14,7 @@ services:
       - ./logs:/usr/src/app/logs
     restart: unless-stopped
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:3000/health"]
+      test: ["CMD", "wget", "--no-verbose", "--tries=1", "--spider", "http://localhost:3000/health"]
       interval: 30s
       timeout: 10s
       retries: 3
