--- a/docker-compose.staging.yml
+++ b/docker-compose.staging.yml
@@ -14,7 +14,7 @@ services:
       - ./logs:/usr/src/app/logs
     restart: unless-stopped
     healthcheck:
-      test: ["CMD", "wget", "--no-verbose", "--tries=1", "--spider", "http://localhost:3000/health"]
+      test: ["CMD", "wget", "--no-verbose", "--tries=1", "--spider", "http://localhost:3000/api/myjourney/health"]
       interval: 30s
       timeout: 10s
       retries: 3
