--- a/.env.staging
+++ b/.env.staging
@@ -1,6 +1,12 @@
 # Configuration pour l'environnement staging
 NODE_ENV=staging
 PORT=3000
+HTTPS_PORT=3443
+
+# Configuration HTTPS (optionnel)
+HTTPS_ENABLED=false
+SSL_KEY_PATH=./certs/private-key.pem
+SSL_CERT_PATH=./certs/certificate.pem
 
 # Configuration de la base de données
 DB_HOST=RCT-SQL-11\ISAE3402
