--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "js-yaml": "^4.1.0",
     "mssql": "^11.0.1",
     "winston": "^3.17.0",
-    "winston-daily-rotate-file": "^5.0.0"
+    "winston-daily-rotate-file": "^5.0.0",
+    "https": "^1.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.28.0",
