--- a/nginx-reverse-proxy.conf
+++ b/nginx-reverse-proxy.conf
@@ -30,6 +30,27 @@ server {
     add_header X-Content-Type-Options nosniff always;
 
     # Proxy vers l'API Node.js
+    location /api/myjourney/ {
+        proxy_pass http://10.100.9.40:3000;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection 'upgrade';
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_cache_bypass $http_upgrade;
+        
+        # Gestion des préfixes
+        proxy_set_header X-Forwarded-Prefix /api/myjourney;
+        
+        # Timeouts
+        proxy_connect_timeout 60s;
+        proxy_send_timeout 60s;
+        proxy_read_timeout 60s;
+    }
+    
+    # Route alternative sans slash final
     location /api/myjourney {
         proxy_pass http://10.100.9.40:3000;
         proxy_http_version 1.1;
@@ -40,6 +61,7 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
         proxy_cache_bypass $http_upgrade;
+        proxy_set_header X-Forwarded-Prefix /api/myjourney;
         
         # Timeouts
         proxy_connect_timeout 60s;
