Activation HTTPS direct dans Node.js

--- a/.env.staging
+++ b/.env.staging
@@ -4,7 +4,7 @@ PORT=3000
 HTTPS_PORT=3443
 
 # Configuration HTTPS (optionnel)
-HTTPS_ENABLED=false
+HTTPS_ENABLED=true
 SSL_KEY_PATH=./certs/private-key.pem
 SSL_CERT_PATH=./certs/certificate.pem
 
