avance vue listing

--- a/.env
+++ b/.env
@@ -1,9 +1,9 @@
 # Configuration de la base de données SQL Server
 DB_HOST=RCT-SQL-11\ISAE3402
 DB_PORT=1433
-DB_USER=USR_APP_TRANSFORM
-DB_PASSWORD=transformjava
-DB_NAME=Transform_Test
+DB_USER=USR_APP_MYJOURNEY
+DB_PASSWORD=2dev23fZE1eer2Egz
+DB_NAME=MyJourney
 
 # Configuration du serveur
 PORT=3000
