--- a/.env.staging
+++ b/.env.staging
@@ -8,12 +8,12 @@ HTTPS_ENABLED=true
 SSL_KEY_PATH=./certs/private-key.pem
 SSL_CERT_PATH=./certs/certificate.pem
 
-# Configuration de la base de données
+# Configuration de la base de données SQL Server
 DB_HOST=RCT-SQL-11\ISAE3402
 DB_PORT=1433
-DB_USER=USR_APP_TRANSFORM
-DB_PASSWORD=transformjava
-DB_NAME=Transform_Test
+DB_USER=USR_APP_MYJOURNEY
+DB_PASSWORD=2dev23fZE1eer2Egz
+DB_NAME=MyJourney
 
 # Timeouts de base de données (en millisecondes)
 DB_REQUEST_TIMEOUT=30000
