--- a/src/SQL/userQueries.yaml
+++ b/src/SQL/userQueries.yaml
@@ -4,5 +4,5 @@ getAllUsers: |
     USR_MAIL, 
     USR_DATE_DEBUT, 
     USR_UPDATE_DATE 
-  FROM UTILISATEUR 
+  FROM ref_UTILISATEUR 
   ORDER BY USR_ID
