--- a/src/SQL/moduleQueries.yaml
+++ b/src/SQL/moduleQueries.yaml
@@ -4,17 +4,17 @@ setModuleStatusMission: |
   DECLARE @status varchar(30) = @StatusParam;
   DECLARE @missionIdDosPgiDosGroupe varchar(50) = @MissionIdDosPgiDosGroupeParam;
 
-  IF EXISTS (SELECT 1 FROM MODULE_STATUS WHERE MODSTAT_ModuleId = @moduleId AND MODSTAT_Source = 'Mission' AND MODSTAT_MissionId = @missionIdDosPgiDosGroupe)
+  IF EXISTS (SELECT 1 FROM MODULE_STATUS WHERE MODSTAT_ModuleId = @moduleId AND MODSTAT_Niveau = 'Mission' AND MODSTAT_MissionId = @missionIdDosPgiDosGroupe)
     BEGIN
       UPDATE MODULE_STATUS
       SET MODSTAT_Status = @status,
         MODSTAT_LastModif = GETDATE(),
         MODSTAT_UsrMail = @mail
-      WHERE MODSTAT_ModuleId = @moduleId AND MODSTAT_Source = 'Mission' AND MODSTAT_MissionId = @missionIdDosPgiDosGroupe
+      WHERE MODSTAT_ModuleId = @moduleId AND MODSTAT_Niveau = 'Mission' AND MODSTAT_MissionId = @missionIdDosPgiDosGroupe
     END
   ELSE
     BEGIN
-      INSERT INTO MODULE_STATUS (MODSTAT_ModuleId, MODSTAT_MissionId, MODSTAT_Source, MODSTAT_Status, MODSTAT_LastModif, MODSTAT_UsrMail)
+      INSERT INTO MODULE_STATUS (MODSTAT_ModuleId, MODSTAT_MissionId, MODSTAT_Niveau, MODSTAT_Status, MODSTAT_LastModif, MODSTAT_UsrMail)
       VALUES (@moduleId, @missionIdDosPgiDosGroupe, 'Mission', @status, GETDATE(), @mail)
     END
 
@@ -24,17 +24,17 @@ setModuleStatusDossier: |
   DECLARE @status varchar(30) = @StatusParam;
   DECLARE @missionIdDosPgiDosGroupe varchar(50) = @MissionIdDosPgiDosGroupeParam;
 
-  IF EXISTS (SELECT 1 FROM MODULE_STATUS WHERE MODSTAT_ModuleId = @moduleId AND MODSTAT_Source = 'Dossier' AND MODSTAT_DosPgi = @missionIdDosPgiDosGroupe)
+  IF EXISTS (SELECT 1 FROM MODULE_STATUS WHERE MODSTAT_ModuleId = @moduleId AND MODSTAT_Niveau = 'Dossier' AND MODSTAT_DosPgi = @missionIdDosPgiDosGroupe)
     BEGIN
       UPDATE MODULE_STATUS
       SET MODSTAT_Status = @status,
         MODSTAT_LastModif = GETDATE(),
         MODSTAT_UsrMail = @mail
-      WHERE MODSTAT_ModuleId = @moduleId AND MODSTAT_Source = 'Dossier' AND MODSTAT_DosPgi = @missionIdDosPgiDosGroupe
+      WHERE MODSTAT_ModuleId = @moduleId AND MODSTAT_Niveau = 'Dossier' AND MODSTAT_DosPgi = @missionIdDosPgiDosGroupe
     END
   ELSE
     BEGIN
-      INSERT INTO MODULE_STATUS (MODSTAT_ModuleId, MODSTAT_DosPgi, MODSTAT_Source, MODSTAT_Status, MODSTAT_LastModif, MODSTAT_UsrMail)
+      INSERT INTO MODULE_STATUS (MODSTAT_ModuleId, MODSTAT_DosPgi, MODSTAT_Niveau, MODSTAT_Status, MODSTAT_LastModif, MODSTAT_UsrMail)
       VALUES (@moduleId, @missionIdDosPgiDosGroupe, 'Dossier', @status, GETDATE(), @mail)
     END
 
@@ -44,16 +44,16 @@ setModuleStatusGroupe: |
   DECLARE @status varchar(30) = @StatusParam;
   DECLARE @missionIdDosPgiDosGroupe varchar(50) = @MissionIdDosPgiDosGroupeParam;
 
-  IF EXISTS (SELECT 1 FROM MODULE_STATUS WHERE MODSTAT_ModuleId = @moduleId AND MODSTAT_Source = 'Groupe' AND MODSTAT_DosGroupe = @missionIdDosPgiDosGroupe)
+  IF EXISTS (SELECT 1 FROM MODULE_STATUS WHERE MODSTAT_ModuleId = @moduleId AND MODSTAT_Niveau = 'Groupe' AND MODSTAT_DosGroupe = @missionIdDosPgiDosGroupe)
     BEGIN
       UPDATE MODULE_STATUS
       SET MODSTAT_Status = @status,
         MODSTAT_LastModif = GETDATE(),
         MODSTAT_UsrMail = @mail
-      WHERE MODSTAT_ModuleId = @moduleId AND MODSTAT_Source = 'Groupe' AND MODSTAT_DosGroupe = @missionIdDosPgiDosGroupe
+      WHERE MODSTAT_ModuleId = @moduleId AND MODSTAT_Niveau = 'Groupe' AND MODSTAT_DosGroupe = @missionIdDosPgiDosGroupe
     END
   ELSE
     BEGIN
-      INSERT INTO MODULE_STATUS (MODSTAT_ModuleId, MODSTAT_DosGroupe, MODSTAT_Source, MODSTAT_Status, MODSTAT_LastModif, MODSTAT_UsrMail)
+      INSERT INTO MODULE_STATUS (MODSTAT_ModuleId, MODSTAT_DosGroupe, MODSTAT_Niveau, MODSTAT_Status, MODSTAT_LastModif, MODSTAT_UsrMail)
       VALUES (@moduleId, @missionIdDosPgiDosGroupe, 'Groupe', @status, GETDATE(), @mail)
     END
