--- a/src/SQL/moduleQueries.yaml
+++ b/src/SQL/moduleQueries.yaml
@@ -1,59 +1,65 @@
 setModuleStatusMission: |
-  DECLARE @moduleId int = (SELECT MOD_ModuleId FROM MODULE WHERE MOD_MouleLibelle = @ModuleParam);
+  DECLARE @moduleId int = (SELECT MOD_ModuleId FROM MODULE WHERE MOD_ModuleLibelle = @ModuleParam);
   DECLARE @mail varchar(250) = @MailParam;
   DECLARE @status varchar(30) = @StatusParam;
   DECLARE @missionIdDosPgiDosGroupe varchar(50) = @MissionIdDosPgiDosGroupeParam;
+  DECLARE @mailPriseProfil varchar(250) = @MailPriseProfilParam;
 
   IF EXISTS (SELECT 1 FROM MODULE_STATUS WHERE MODSTAT_ModuleId = @moduleId AND MODSTAT_Niveau = 'Mission' AND MODSTAT_MissionId = @missionIdDosPgiDosGroupe)
     BEGIN
       UPDATE MODULE_STATUS
       SET MODSTAT_Status = @status,
         MODSTAT_LastModif = GETDATE(),
-        MODSTAT_UsrMail = @mail
+        MODSTAT_UsrMail = @mail,
+        MODSTAT_PriseProfilMail = @mailPriseProfil
       WHERE MODSTAT_ModuleId = @moduleId AND MODSTAT_Niveau = 'Mission' AND MODSTAT_MissionId = @missionIdDosPgiDosGroupe
     END
   ELSE
     BEGIN
-      INSERT INTO MODULE_STATUS (MODSTAT_ModuleId, MODSTAT_MissionId, MODSTAT_Niveau, MODSTAT_Status, MODSTAT_LastModif, MODSTAT_UsrMail)
-      VALUES (@moduleId, @missionIdDosPgiDosGroupe, 'Mission', @status, GETDATE(), @mail)
+      INSERT INTO MODULE_STATUS (MODSTAT_ModuleId, MODSTAT_MissionId, MODSTAT_Niveau, MODSTAT_Status, MODSTAT_LastModif, MODSTAT_UsrMail, MODSTAT_PriseProfilMail)
+      VALUES (@moduleId, @missionIdDosPgiDosGroupe, 'Mission', @status, GETDATE(), @mail, @mailPriseProfil)
     END
 
 setModuleStatusDossier: |
-  DECLARE @moduleId int = (SELECT MOD_ModuleId FROM MODULE WHERE MOD_MouleLibelle = @ModuleParam);
+  DECLARE @moduleId int = (SELECT MOD_ModuleId FROM MODULE WHERE MOD_ModuleLibelle = @ModuleParam);
   DECLARE @mail varchar(250) = @MailParam;
   DECLARE @status varchar(30) = @StatusParam;
   DECLARE @missionIdDosPgiDosGroupe varchar(50) = @MissionIdDosPgiDosGroupeParam;
+  DECLARE @mailPriseProfil varchar(250) = @MailPriseProfilParam;
 
   IF EXISTS (SELECT 1 FROM MODULE_STATUS WHERE MODSTAT_ModuleId = @moduleId AND MODSTAT_Niveau = 'Dossier' AND MODSTAT_DosPgi = @missionIdDosPgiDosGroupe)
     BEGIN
       UPDATE MODULE_STATUS
       SET MODSTAT_Status = @status,
         MODSTAT_LastModif = GETDATE(),
-        MODSTAT_UsrMail = @mail
+        MODSTAT_UsrMail = @mail,
+        MODSTAT_PriseProfilMail = @mailPriseProfil
       WHERE MODSTAT_ModuleId = @moduleId AND MODSTAT_Niveau = 'Dossier' AND MODSTAT_DosPgi = @missionIdDosPgiDosGroupe
     END
   ELSE
     BEGIN
-      INSERT INTO MODULE_STATUS (MODSTAT_ModuleId, MODSTAT_DosPgi, MODSTAT_Niveau, MODSTAT_Status, MODSTAT_LastModif, MODSTAT_UsrMail)
-      VALUES (@moduleId, @missionIdDosPgiDosGroupe, 'Dossier', @status, GETDATE(), @mail)
+      INSERT INTO MODULE_STATUS (MODSTAT_ModuleId, MODSTAT_DosPgi, MODSTAT_Niveau, MODSTAT_Status, MODSTAT_LastModif, MODSTAT_UsrMail, MODSTAT_PriseProfilMail)
+      VALUES (@moduleId, @missionIdDosPgiDosGroupe, 'Dossier', @status, GETDATE(), @mail, @mailPriseProfil)
     END
 
 setModuleStatusGroupe: |
-  DECLARE @moduleId int = (SELECT MOD_ModuleId FROM MODULE WHERE MOD_MouleLibelle = @ModuleParam);
+  DECLARE @moduleId int = (SELECT MOD_ModuleId FROM MODULE WHERE MOD_ModuleLibelle = @ModuleParam);
   DECLARE @mail varchar(250) = @MailParam;
   DECLARE @status varchar(30) = @StatusParam;
   DECLARE @missionIdDosPgiDosGroupe varchar(50) = @MissionIdDosPgiDosGroupeParam;
+  DECLARE @mailPriseProfil varchar(250) = @MailPriseProfilParam;
 
   IF EXISTS (SELECT 1 FROM MODULE_STATUS WHERE MODSTAT_ModuleId = @moduleId AND MODSTAT_Niveau = 'Groupe' AND MODSTAT_DosGroupe = @missionIdDosPgiDosGroupe)
     BEGIN
       UPDATE MODULE_STATUS
       SET MODSTAT_Status = @status,
         MODSTAT_LastModif = GETDATE(),
-        MODSTAT_UsrMail = @mail
+        MODSTAT_UsrMail = @mail,
+        MODSTAT_PriseProfilMail = @mailPriseProfil
       WHERE MODSTAT_ModuleId = @moduleId AND MODSTAT_Niveau = 'Groupe' AND MODSTAT_DosGroupe = @missionIdDosPgiDosGroupe
     END
   ELSE
     BEGIN
-      INSERT INTO MODULE_STATUS (MODSTAT_ModuleId, MODSTAT_DosGroupe, MODSTAT_Niveau, MODSTAT_Status, MODSTAT_LastModif, MODSTAT_UsrMail)
-      VALUES (@moduleId, @missionIdDosPgiDosGroupe, 'Groupe', @status, GETDATE(), @mail)
+      INSERT INTO MODULE_STATUS (MODSTAT_ModuleId, MODSTAT_DosGroupe, MODSTAT_Niveau, MODSTAT_Status, MODSTAT_LastModif, MODSTAT_UsrMail, MODSTAT_PriseProfilMail)
+      VALUES (@moduleId, @missionIdDosPgiDosGroupe, 'Groupe', @status, GETDATE(), @mail, @mailPriseProfil)
     END
