--- a/src/SQL/missionQueries.yaml
+++ b/src/SQL/missionQueries.yaml
@@ -37,7 +37,7 @@ getAllMissionsDashboard: |
     D.DOS_SOCIETEGROUPELIBELLE, 
     MD.DOS_PGI, 
     D.DOS_NOM, 
-    CONCAT(MD.MD_MISSION, ' - ', MD.MD_MILLESIME) AS MISSION, 
+    CONCAT(MD.MD_MISSION, ' - ', MD.LIBELLE_MISSIONS, ' - ', MD.MD_MILLESIME) AS MISSION, 
     LDM.DTMISS_Source,
     LDM.DTMISS_MissionId,
     LDM.DTMISS_ProfilId,
