--- a/.env.production
+++ b/.env.production
@@ -1,33 +1,32 @@
-# Configuration pour l'environnement de PRODUCTION
+# Configuration pour l'environnement staging
 NODE_ENV=production
 PORT=3000
+HTTPS_PORT=3443
 
-# Base de données SQL Server - PRODUCTION
-DB_HOST=sql-server-prod.company.com
+# Configuration HTTPS (optionnel)
+HTTPS_ENABLED=true
+SSL_KEY_PATH=./certs/private-key.pem
+SSL_CERT_PATH=./certs/certificate.pem
+
+# Configuration de la base de données SQL Server
+DB_HOST=RCT-SQL-11\ISAE3402
 DB_PORT=1433
-DB_USER=myjourney_prod_user
-DB_PASSWORD=VeryStrongProductionPassword456!
-DB_NAME=MyJourney_Production
+DB_USER=USR_APP_MYJOURNEY
+DB_PASSWORD=2dev23fZE1eer2Egz
+DB_NAME=MyJourney
 
-# Configuration des logs - PRODUCTION
-LOG_LEVEL=warn
-LOG_MAX_SIZE=100m
-LOG_MAX_FILES=90d
+# Timeouts de base de données (en millisecondes)
+DB_REQUEST_TIMEOUT=30000
+DB_CONNECTION_TIMEOUT=30000
 
-# URLs et domaines - PRODUCTION
-FRONTEND_URL=https://myjourney.company.com
-API_BASE_URL=https://api-myjourney.company.com
+# Configuration du pool de connexions
+DB_POOL_MAX=10
+DB_POOL_MIN=0
 
-# Sécurité - PRODUCTION
-CORS_ORIGIN=https://myjourney.company.com
-JWT_SECRET=production-jwt-secret-key-very-secure
+# Configuration des logs
+LOG_LEVEL=info
+LOG_MAX_SIZE=20m
+LOG_MAX_FILES=14d
 
-# Monitoring - PRODUCTION
-ENABLE_MONITORING=true
-HEALTH_CHECK_INTERVAL=60000
-
-# Performance - PRODUCTION
-DB_POOL_MAX=20
-DB_POOL_MIN=5
-DB_CONNECTION_TIMEOUT=60000
-DB_REQUEST_TIMEOUT=60000
+# Configuration CORS
+CORS_ORIGIN=*
