--- a/.env.production
+++ b/.env.production
@@ -9,10 +9,10 @@ SSL_KEY_PATH=./certs/private-key.pem
 SSL_CERT_PATH=./certs/certificate.pem
 
 # Configuration de la base de données SQL Server
-DB_HOST=RCT-SQL-11\ISAE3402
+DB_HOST=CI1-LST-ISAE-01
 DB_PORT=1433
 DB_USER=USR_APP_MYJOURNEY
-DB_PASSWORD=2dev23fZE1eer2Egz
+DB_PASSWORD="2MK@Q{AfZE12hEgz"
 DB_NAME=MyJourney
 
 # Timeouts de base de données (en millisecondes)
