--- a/.env.production
+++ b/.env.production
@@ -12,7 +12,7 @@ SSL_CERT_PATH=./certs/certificate.pem
 DB_HOST=CI1-LST-ISAE-01
 DB_PORT=1433
 DB_USER=USR_APP_MYJOURNEY
-DB_PASSWORD="2MK@Q{AfZE12hEgz"
+DB_PASSWORD=2MK@Q{AfZE12hEgz
 DB_NAME=MyJourney
 
 # Timeouts de base de données (en millisecondes)
